# kimi-cli

./: AGENTS.md  README.md  pyproject.toml
sdks/kimi-sdk/: pyproject.toml
src/kimi/kaos/: pyproject.toml
src/kimi/kosong/: pyproject.toml
src/kimi/kosong/src/kosong/: __main__.py
src/kimi_cli/: app.py  config.py  exception.py  llm.py
src/kimi_cli/auth/: oauth.py
src/kimi_cli/cli/: __init__.py  __main__.py  _lazy_group.py
src/kimi_cli/hooks/: engine.py
src/kimi_cli/skill/: __init__.py
src/kimi_cli/skills/kimi-cli-help/: SKILL.md
src/kimi_cli/soul/: __init__.py  agent.py  approval.py  kimisoul.py  toolset.py
src/kimi_cli/subagents/: builder.py
src/kimi_cli/telemetry/: __init__.py
src/kimi_cli/ui/: theme.py
src/kimi_cli/ui/shell/: __init__.py  slash.py
src/kimi_cli/ui/shell/visualize/: _live_view.py
src/kimi_cli/utils/: pyinstaller.py
src/kimi_cli/vis/: app.py
src/kimi_cli/wire/: types.py
vis/src/features/dual-view/: dual-view.tsx
vis/src/features/wire-viewer/: wire-event-card.tsx  wire-filters.tsx
